--- a/Pyramid Riches Slots/Resources/Info.plist
+++ b/Pyramid Riches Slots/Resources/Info.plist
@@ -8,6 +8,7 @@
 		<string>Inter-Medium.ttf</string>
 		<string>MultiroundPro.otf</string>
 		<string>Muller Bold.ttf</string>
+		<string>MullerMedium.ttf</string>
 	</array>
 </dict>
 </plist>
